增加了个人信息，修改了css等 功能还不够强大，将文章和index.js分离，需增加自动保存功能。

--- a/index.html
+++ b/index.html
@@ -3,34 +3,36 @@
 <head>
   <meta charset="utf-8">
   <title>刘晨的简历</title>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-  <link rel="stylesheet" href="github-markdown.css">
+<link rel="stylesheet" href="libs/bootstrap.min.css">
+<script src="libs/jquery.min.js"></script>
+<script src="libs/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="libs/github-markdown.css">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <div class="title">
+  <div id="editor" class="container">
+    <div class="title" v-if="!isfull">
       <h1>Markdown编辑器</h1>
     </div>
-    <div id="editor">
-      <div class="col-xs-12 col-md-6" v-bind:class="{'hide': !isfull}">
-        <textarea class="form-control" v-model="input" debounce="300"></textarea>
+    <div>
+      <div class="col-xs-12 col-md-6" v-if="!isfull">
+        <textarea class="form-control shado" v-model="input" debounce="300"></textarea>
       </div>
-      <div class="col-xs-12  content" v-bind:class="{'col-md-6': isfull}">
+      <div class="col-xs-12  content" v-bind:class="{'col-md-6': !isfull, 'content-full': isfull}">
         <div class="panel panel-default">
-          <div class="markdown-body" v-bind:class="{'max-hei': isfull}" v-html="input | marked"></div>
+          <div class="markdown-body shado" v-bind:class="{'max-hei': !isfull}" v-html="input | marked"></div>
         </div>
-        <button class="btn btn-default pull-7"  v-if="isfull" v-on:click="full">
+        <button class="btn btn-default pull-7"  v-if="!isfull" v-on:click="full">
           <span class="glyphicon glyphicon-resize-full"></span>
         </button>
-        <button class="btn btn-default pull-7"  v-if="!isfull" v-on:click="small">
+        <button class="btn btn-default pull-7"  v-if="isfull" v-on:click="small">
           <span class="glyphicon glyphicon-resize-small"></span>
         </button>
       </div>
     </div>
   </div>
-  <script src="http://static.runoob.com/assets/vue/1.0.11/vue.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
+  <script src="libs/vue.min.js"></script>
+  <script src="libs/marked.min.js"></script>
   <script src="index.js"></script>
 </body>
 </html>
